# orchidflow

./: .gitignore  CMakeLists.txt
include/: base.h  dtype.h  graph.h  node.h  op.h  register.h  tensor.h  tuple.h  variate.h
src/graph/: graph.cpp  main.cpp  node.cpp  op.cpp
test/unittest/: test_dtype.cpp  test_graph.cpp  test_node_op.cpp  test_tensor.cpp  test_tuple.cpp
